--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "~1.19.0",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "debug": "~4.3.1",
     "ejs": "3.1.5",
@@ -21,6 +22,7 @@
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "redis": "^3.1.2",
     "serve-favicon": "~2.5.0"
   }
 }
